--- a/references.bib
+++ b/references.bib
@@ -51,6 +51,23 @@
   file = {/Users/tanyastrydom/Zotero/storage/7ZDGIXPL/Delmas et al. - 2019 - Analysing ecological networks of species interacti.pdf;/Users/tanyastrydom/Zotero/storage/EU2YG29S/brv.html}
 }
 
+@article{jonssonReliabilityR50Measure2015,
+  title = {The Reliability of {{R50}} as a Measure of Vulnerability of Food Webs to Sequential Species Deletions},
+  author = {Jonsson, Tomas and Berg, Sofia and Pimenov, Alexander and Palmer, Catherine and Emmerson, Mark},
+  date = {2015},
+  journaltitle = {Oikos},
+  volume = {124},
+  number = {4},
+  pages = {446--457},
+  issn = {1600-0706},
+  doi = {10.1111/oik.01588},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/oik.01588},
+  urldate = {2025-04-08},
+  abstract = {Recent studies predict elevated and accelerating rates of species extinctions over the 21st century, due to climate change and habitat loss. Considering that such primary species loss may initiate cascades of secondary extinctions and push systems towards critical tipping points, we urgently need to increase our understanding of if certain sequences of species extinctions can be expected to be more devastating than others Most theoretical studies addressing this question have used a topological (non-dynamical) approach to analyse the probability that food webs will collapse, below a fixed threshold value in species richness, when subjected to different sequences of species loss. Typically, these studies have neither considered the possibility of dynamical responses of species, nor that conclusions may depend on the value of the collapse threshold. Here we analyse how sensitive conclusions on the importance of different species are to the threshold value of food web collapse. Using dynamical simulations, where we expose model food webs to a range of extinction sequences, we evaluate the reliability of the most frequently used index, R50, as a measure of food web robustness. In general, we find that R50 is a reliable measure and that identification of destructive deletion sequences is fairly robust, within a moderate range of collapse thresholds. At the same time, however, focusing on R50 only hides a lot of interesting information on the disassembly process and can, in some cases, lead to incorrect conclusions on the relative importance of species in food webs.},
+  langid = {english},
+  file = {/Users/tanyastrydom/Zotero/storage/2Z6YEYEQ/Jonsson et al. - 2015 - The reliability of R50 as a measure of vulnerabili.pdf;/Users/tanyastrydom/Zotero/storage/F8HVGFP8/oik.html}
+}
+
 @article{kortschFoodwebStructureVaries2019,
   title = {Food-Web Structure Varies along Environmental Gradients in a High-Latitude Marine Ecosystem},
   author = {Kortsch, Susanne and Primicerio, Raul and Aschan, Michaela and Lind, Sigrid and Dolgov, Andrey V. and Planque, Benjamin},
