--- a/references.bib
+++ b/references.bib
@@ -68,6 +68,23 @@
   file = {/Users/tanyastrydom/Zotero/storage/2Z6YEYEQ/Jonsson et al. - 2015 - The reliability of R50 as a measure of vulnerabili.pdf;/Users/tanyastrydom/Zotero/storage/F8HVGFP8/oik.html}
 }
 
+@article{keyesSynthesisingRelationshipsFood2024,
+  title = {Synthesising the {{Relationships Between Food Web Structure}} and {{Robustness}}},
+  author = {Keyes, Aislyn A. and Barner, Allison K. and Dee, Laura E.},
+  date = {2024},
+  journaltitle = {Ecology Letters},
+  volume = {27},
+  number = {10},
+  pages = {e14533},
+  issn = {1461-0248},
+  doi = {10.1111/ele.14533},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ele.14533},
+  urldate = {2024-10-29},
+  abstract = {For many decades, ecologists have sought to understand the extent to which species losses lead to secondary extinctions—that is, the additional loss of species that occurs when resources or key interactions are lost (i.e. robustness). In particular, ecologists aim to identify generalisable rules that explain which types of food webs are more or less robust to secondary extinctions. Food web structure, or the patterns formed by species and their interactions, has been extensively studied as a potential factor that influences robustness to species loss. We systematically reviewed 28 studies to identify the relationships between food web structure and robustness to species loss and how the conclusions depend on methodological differences. Contrary to popular belief and theory, we found relatively consistent, positive relationships between connectance and robustness, among other generalities. Yet, we also found that conflicting conclusions about structure-robustness relationships can be, in part, attributed to differences in the type of data that studies use, particularly studies that use empirical data versus those generated from theoretical models. This review points towards a need to standardise methodology to answer the open question of whether robustness and its relationship with food web structure and to provide applicable insights for managing complex systems.},
+  langid = {english},
+  file = {/Users/tanyastrydom/Zotero/storage/GRSIWHS2/ele.html}
+}
+
 @article{kortschFoodwebStructureVaries2019,
   title = {Food-Web Structure Varies along Environmental Gradients in a High-Latitude Marine Ecosystem},
   author = {Kortsch, Susanne and Primicerio, Raul and Aschan, Michaela and Lind, Sigrid and Dolgov, Andrey V. and Planque, Benjamin},
@@ -174,6 +191,23 @@
   langid = {english},
   keywords = {food web structure,temporal variability,topology},
   file = {/Users/tanyastrydom/Zotero/storage/BVAP48E4/Olivier et al. - 2019 - Exploring the temporal variability of a food web u.pdf;/Users/tanyastrydom/Zotero/storage/XCR3RW4J/ecog.html}
+}
+
+@article{rooneyIntegratingFoodWeb2012,
+  title = {Integrating Food Web Diversity, Structure and Stability},
+  author = {Rooney, Neil and McCann, Kevin S.},
+  date = {2012-01},
+  journaltitle = {Trends in Ecology \& Evolution},
+  shortjournal = {Trends in Ecology \& Evolution},
+  volume = {27},
+  number = {1},
+  pages = {40--46},
+  issn = {01695347},
+  doi = {10.1016/j.tree.2011.09.001},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S016953471100259X},
+  urldate = {2025-12-05},
+  langid = {english},
+  file = {/Users/tanyastrydom/Zotero/storage/TLI52EBB/Rooney and McCann - 2012 - Integrating food web diversity, structure and stability.pdf}
 }
 
 @article{staniczenkoGhostNestednessEcological2013,
