--- a/references.bib
+++ b/references.bib
@@ -121,6 +121,23 @@
   file = {/Users/tanyastrydom/Zotero/storage/TKRWWMG5/Lau et al. - 2017 - Ecological network metrics opportunities for synt.pdf;/Users/tanyastrydom/Zotero/storage/W8QFKNM9/ecs2.html}
 }
 
+@article{lewinsohnStructurePlantAnimal2006,
+  title = {Structure in Plant–Animal Interaction Assemblages},
+  author = {Lewinsohn, Thomas M. and Inácio Prado, Paulo and Jordano, Pedro and Bascompte, Jordi and M. Olesen, Jens},
+  date = {2006},
+  journaltitle = {Oikos},
+  volume = {113},
+  number = {1},
+  pages = {174--184},
+  issn = {1600-0706},
+  doi = {10.1111/j.0030-1299.2006.14583.x},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.0030-1299.2006.14583.x},
+  urldate = {2025-12-16},
+  abstract = {We present a comprehensive approach to detect pattern in assemblages of plant and animal species linked by interactions such as pollination, frugivory or herbivory. Simple structural models produce gradient, compartmented or nested patterns of interaction; intermediate patterns between a gradient and compartments are possible, and nesting within compartments produces a combined model. Interaction patterns can be visualized and analyzed either as matrices, as bipartite networks or as multivariate sets through correspondence analysis. We argue that differences among patterns represent outcomes of distinct evolutionary and ecological processes in these highly diversified assemblages. Instead of choosing one model a priori, assemblages should be probed for a suite of patterns. A plant–pollinator assemblage exemplifies a simple nested pattern, whereas a plant–herbivore assemblage illustrates a compound pattern with nested structures within compartments. Compartmentation should reflect coevolutionary histories and constraints, whereas differences in species abundance or dispersal may generate nestedness.},
+  langid = {english},
+  file = {/Users/tanyastrydom/Zotero/storage/9NCT3W49/Lewinsohn et al. - 2006 - Structure in plant–animal interaction assemblages.pdf;/Users/tanyastrydom/Zotero/storage/6PXK3EW9/j.0030-1299.2006.14583.html}
+}
+
 @article{lurgiGeographicalVariationMultiplex2020,
   title = {Geographical Variation of Multiplex Ecological Networks in Marine Intertidal Communities},
   author = {Lurgi, Miguel and Galiana, Núria and Broitman, Bernardo R. and Kéfi, Sonia and Wieters, Evie A. and Navarrete, Sergio A.},
@@ -137,6 +154,18 @@
   urldate = {2025-04-15},
   abstract = {Understanding the drivers of geographical variation in species distributions, and the resulting community structure, constitutes one of the grandest challenges in ecology. Geographical patterns of species richness and composition have been relatively well studied. Less is known about how the entire set of trophic and non-trophic ecological interactions, and the complex networks that they create by gluing species together in complex communities, change across geographical extents. Here, we compiled data of species composition and three types of ecological interactions occurring between species in rocky intertidal communities across a large spatial extent (\textasciitilde 970 km of shoreline) of central Chile, and analyzed the geographical variability in these multiplex networks (i.e., comprising several interaction types) of ecological interactions. We calculated nine network summary statistics common across interaction types, and additional network attributes specific to each of the different types of interactions. We then investigated potential environmental drivers of this multivariate network organization. These included variation in sea surface temperature and coastal upwelling, the main drivers of productivity in nearshore waters. Our results suggest that structural properties of multiplex ecological networks are affected by local species richness and modulated by factors influencing productivity and environmental predictability. Our results show that non-trophic negative interactions are more sensitive to spatially structured temporal environmental variation than feeding relationships, with non-trophic positive interactions being the least labile to it. We also show that environmental effects are partly mediated through changes in species richness and partly through direct influences on species interactions, probably associated to changes in environmental predictability and to bottom-up nutrient availability. Our findings highlight the need for a comprehensive picture of ecological interactions and their geographical variability if we are to predict potential effects of environmental changes on ecological communities.},
   file = {/Users/tanyastrydom/Zotero/storage/CJLNP3MF/Lurgi et al. - 2020 - Geographical variation of multiplex ecological net.pdf}
+}
+
+@article{melloNovelSemanticTheory2025,
+  title = {A Novel Semantic Theory of the Assembly Rules of Interaction Networks},
+  author = {Mello, Marco A. R. and Santana, Sharlene and Forget, Pierre-Michel and Kita, Cristina and Lotfi, Nastaran and Machado, Isabel and Muylaert, Renata and Rodrigues, Francisco and Straka, Tanja Maria and Dormann, Carsten F.},
+  date = {2025-11-26},
+  publisher = {EcoEvoRxiv},
+  url = {https://ecoevorxiv.org/repository/view/10910/},
+  urldate = {2025-12-16},
+  abstract = {In the web of life, every interaction between species tells a story of cooperation, conflict, or chance. For centuries, ecologists have charted these stories to better understand phenomena such as pollination and disease. We have been using the lens of network science to distill them into topological patterns such as nestedness or modularity. Yet, like in the old buddhist parable of the blind monks and the elephant, these separate views have often missed the bigger picture. In this Perspective, we review the history of topological studies of interaction networks, challenge the “black-and-white” paradigm, and point out a way forward: the Integrative Theory of Interaction Networks (ITIN). This theory unveils the logic of how interaction networks assemble through sequential, rule-bound processes shaped mainly by resource dissimilarity and interaction type. We show that compound topologies are likely the norm in function-oriented, taxonomically-inclusive, well-sampled networks. ITIN is deductive, predictive, and testable, mapping from first principles to real-world systems, thus helping us grasp “the whole elephant”. As ecologists confront the polycrisis, from irreparable biodiversity loss to global health threats, ITIN offers a coherent framework to understand, predict, and restore the threads of the web of life.},
+  langid = {english},
+  file = {/Users/tanyastrydom/Zotero/storage/WMRS2BID/Mello et al. - 2025 - A novel semantic theory of the assembly rules of interaction networks.pdf}
 }
 
 @article{miloNetworkMotifsSimple2002,
